# Deep-Lynx-Machine-Learning

./: .env_sample  .flaskenv  .gitignore  LICENSE.txt  NOTICE.txt  README.md  pyproject.toml  settings.py
.github/workflows/: deploy-main.yml
adapter/: __init__.py  deep_lynx_import.py  deep_lynx_query.py  ml_adapter.py
data/: .gitignore
model/: .gitignore  __init__.py  ml_model.py
model/user_guide/: README.md  sample_model.ipynb
prediction/: __init__.py  ml_prediction.py
prediction/user_guide/: README.md  sample_prediction.ipynb
split/: hierarchical_clustering.ipynb  kennard_stone.ipynb  random.ipynb  sequential.ipynb
utils/: __init__.py  run_jupyter_notebook.py
variable_selection/user_guide/: README.md  sample_variable_selection.ipynb
